# discord-bot

./: Cargo.toml  commands.json  users.json
src/: commands.rs  date_helper.rs  json_helper.rs  main.rs
