[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"